Добавлены вызовы из браузера - Get-запросы
